k8s/app-runtime-httpd-php-prod/app-runtime-httpd-php-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-runtime-httpd-php-prod-svc
spec:
  ports:
  - port: 80
  selector:
    app: app-runtime-httpd-php-prod
