k8s/app-runtime-httpd-php-prod/zl-tmpsvc.yml
apiVersion: v1
kind: Service
metadata:
  name: external-ip
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-ip
subsets:
- addresses:
  - ip: 10.0.3.23
  ports:
  - name: app
    port: 80
    protocol: TCP
