k8s/app-runtime-httpd-php-prod/ingress-www.aokranj.com.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-aokranj-com-ing
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/default-backend: ingress-error-page-svc
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - www.aokranj.com
      - aokranj.com
      secretName: certnkey-www-aokranj-com
  rules:
  - host: www.aokranj.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-runtime-httpd-php-prod-svc
            port:
              number: 80
